Fixed the ligature issue on safari

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -38,8 +38,10 @@
   line-height: normal;
 }
 .header .logo-name {
-  font-family: 'Agustina Regular';
+  font-family: "Agustina Regular";
   font-weight: bold;
+  font-variant-ligatures: no-common-ligatures;
+  -webkit-font-variant-ligatures: no-common-ligatures;
   padding: 0 10px;
 }
 
